added most of service logic
